...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.constraint.ConstraintLayout
                android:id="@+id/neighbour_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/neighbour_image"
                    android:layout_width="match_parent"
...
                    android:textColor="@android:color/white"
                    android:textSize="35sp"
                    app:layout_constraintBottom_toBottomOf="@+id/neighbour_image"
                    app:layout_constraintStart_toStartOf="parent"/>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/neighbour_favorite_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="28dp"
                    android:src="@drawable/ic_star_yellow_24dp"
                    app:layout_constraintBottom_toBottomOf="@+id/neighbour_image"
...
